--- a/index.html
+++ b/index.html
@@ -4,17 +4,34 @@
         <meta charset='utf-8'>
         <title>Desafio Pseudo Elemento</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' href='index.css'>
+        <link rel='stylesheet' href='style.css'>
         <script src='main.js'></script>
     </head>
     <body>
         <div class="container">
-            <article id="article1">
-                <span
-            </article>
-            <article id="article1">
 
+            <article class="article"  id="article1">
+                <div class="element1">
+                    <p> <span class="task-ok">&#10004;</span>Deplyment article </p>
+                </div>
             </article>
+
+            <div class="conexao">
+                <div class="circulo-esquerdo">
+                    <div class="circulo-pequeno"></div>  
+                </div>
+                <div class="circulo-direito">
+                    <div class="circulo-pequeno"></div>                    
+                </div>
+            </div>
+
+            <article class="article" id="article2">
+                <div class="element2"></div>                    
+                    <p><span class="task-ok">&#10004;</span>job completed</p>
+                    <small>Show all jobs</small>
+                </div>
+            </article>
+
         </div>        
     </body>
 </html>
